--- a/bonus/css/main.css
+++ b/bonus/css/main.css
@@ -27,6 +27,10 @@ body{
     top:95px;
     left: 147.4px;
 }
+.fade{
+  
+}
+
 .box{
     /* padding-right: 30px;
     padding-left: 30px; */
@@ -36,9 +40,6 @@ body{
     background-color: #FFFFFF;
     border: 1px solid #e6e6e6;
     background-color: #fff;
-}
-.title{
-    
 }
 .title h1{
     background-image: url('../images/logo.png');
@@ -71,7 +72,8 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding:10px;
+    padding:5px 0 5px 10px;
+    margin: 10px 10px 10px 0;
     box-sizing: border-box;
     text-decoration: none;
     font-size: 14px;
@@ -95,6 +97,7 @@ body{
     display:flex;
     width: 100%;
     align-items: center;
+    margin:5px 0 5px 0;
 }
 .bar{
     background-color: #efefef;
@@ -107,4 +110,19 @@ body{
     margin: 0 18px;
     font-size: 13px;
     font-weight: 600;
+}
+.form__sign-up{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+.form__sign-up__item{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding: 10px 0 10px 10px;
+    border-radius: 4px;
+    border: 1px solid #c4c4c4;
+}
+.form__sign-up__item:focus{
+    outline-color: #999;
 }
