--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,109 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: linear-gradient(to bottom, #1c5380, #1c5380 50%, #FFF 50%, #FFF);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+h1 {
+  margin: 0;
+  padding:0;
+  color: #FFF;
+}
+
+h2 {
+  margin: 10px 0px;
+  padding:0px 10px;
+  color: #06365f;
+  font-weight: bold;
+}
+
+p {
+  margin: 10px 0px;
+  padding: 0px 10px;
+  font-size: 0.8em;
+  text-align: justify;
+  font-weight: normal;
+}
+
+.general-container {
+  margin: 0 auto;
+  width: 725px; 
+  }
+
+.left-content {
+  margin: 50px 0px 0px 0px;
+  float: left;
+ }
+
+.right-content {
+  float: right;
+  width: 50%;
+  margin: 50px 0px 0px 0px;
+}
+
+.footer {
+  clear: both;
+  background: #FFF;
+  display: table;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  text-transform: uppercase;
+  font-size: 0.9em;
+}
+
+.text-block {
+  position: absolute;
+  background-color: #FFF;
+  border-radius: 2%;
+  padding: 0px 5px;
+}
+
+.container {
+  position: relative;
+  text-align: justify;
+  background-size: cover;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.row {
+  display: table;
+  padding: 20px 0px 0px 0px;
+}
+
+.left-picture {
+  float: left;
+  padding: 5px;
+ }
+
+.right-picture {
+  float: left;
+  padding: 25px 0px 0px 0px;
+}
+
+.badge {
+  width: 100%;
+  margin: 0 10px;
+  padding: 0px;
+}
+
+.badge-right {
+  width: 50%;
+  height: 50%;
+  display: inline-block;
+}
+
+.badge-left {
+  width: 50%;
+  height: 50%;
+  display: inline-block;
+  float: left;
 }
