--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,116 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+header{
+  width: 100%;
+  height: 250px;
+  background-image: linear-gradient( #557C9F , #386186);
+  position: absolute;
+  margin:0 auto;
+}
+
+.container{
+  width: 795px;
+  height: auto;
+  margin: 0 auto;
+  position: relative;
+}
+
+.wrapper{
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.wrapper > div{
+  padding: 30px;
+}
+
+.sub-wrapper{
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.sub-wrapper > div{
+  padding: 10px 30px;
+}
+
+.logo img{
+  width:250px;
+  height: 60px;
+}
+
+
+
+.sub-wrapper div button{
+  background-image: linear-gradient( #386186 , #557C9F);
+  border:none;
+  width: 100px;
+  height: 35px;
+  color:#fff;
+  font-size: 12px;
+  font-weight: bold;
+  vertical-align: middle;
+  text-align: center;
+  box-shadow: 0px 2px 10px #386186, 
+  -2px 2px 15px #386186;
+  border-radius:2px;
+ 
+}
+
+.sub-wrapper h2{
+  color:#123A5E;
+}
+.logo{
+  margin-left: -40px;
+}
+
+.home img{
+  width: 17px;
+  height: 17px;
+  position: relative;
+  margin-bottom: -4px;
+  margin-right: 4px;
+}
+
+
+
+.explanation{
+  grid-column:1/3;
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 5px 0 8px -6px #999, -5px 0 10px -6px #999;
+  
+}
+
+.explanation ul{
+  margin-top:30px;
+  margin-left:-40px;
+}
+
+.explanation ul li{
+  display: inline-block;
+}
+
+.footer{
+  grid-column:1/3;
+  text-align: center;
+}
+
+.footer ul li{
+  display: inline-block;
+}
+
+.footer ul li a{
+  text-decoration: none;
+  font-weight: bold;
+  color:#557C9F;
+  padding:5px;
+  font-size: 12px;
+}
+
+.footer ul li span{
+  color:#ccc;
+  font-weight: bold;
+  font-size: 10px;
+
+}
