--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,30 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+}
+
+.bg-color {
+  position: relative;
+  background-image: url("../images/bgtile.png");
+  width: 100%;
+  height: 400px;
+  overflow-x: visible;
+  z-index: auto;
+}
+
+.site {
+  position: absolute;
+  display: inline-block;
+  background-color: burlywood;
+  width: 100%;
+  margin: 100px 150px;
+  height: 700px;
+  z-index: 1;
 }
