--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,111 +1,222 @@
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700");
+
+/* From https://github.com/daneden/animate.css/ */
+@keyframes bounce {
+  from,
+  20%,
+  53%,
+  80%,
+  to {
+    -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+
+  40%,
+  43% {
+    -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    -webkit-transform: translate3d(0, -30px, 0);
+    transform: translate3d(0, -30px, 0);
+  }
+
+  70% {
+    -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    -webkit-transform: translate3d(0, -15px, 0);
+    transform: translate3d(0, -15px, 0);
+  }
+
+  90% {
+    -webkit-transform: translate3d(0, -4px, 0);
+    transform: translate3d(0, -4px, 0);
+  }
+}
+
 /*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
+Colors:
+
+Text: 1A1A1A
+Green: #00B172
+White: #FFF
+
 */
 
 * {
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 400;
+  color: #1a1a1a;
   margin: 0;
   padding: 0;
 }
 
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-footer {
-  position: absolute;
+nav {
+  background-color: #fff;
   width: 100%;
-  bottom: 20%;
-  text-align: center;
-  z-index: 2;
-  color: gainsboro;
-  text-transform: uppercase;
+  position: fixed;
+  z-index: 100;
 }
 
-footer ul li {
+nav > img {
+  margin: 25px 65px;
+  float: left;
+  width: 325px;
+}
+
+nav > img:hover {
+  -webkit-animation-name: bounce;
+  animation-name: bounce;
+  -webkit-transform-origin: center bottom;
+  transform-origin: center bottom;
+  animation-duration: 4s;
+}
+
+nav ul {
+  margin-top: 60px;
+  text-align: right;
+  list-style-type: none;
+}
+
+nav li {
   display: inline;
-  margin-right: 1em;
 }
 
-footer a {
-  font-weight: bold;
-  color:#8ba6be;
+nav a {
+  margin-right: 45px;
+  font-size: 35px;
+  color: #1a1a1a;
   text-decoration: none;
 }
 
-h1 {
-  color: #10345a;
-  padding-bottom: 20px;
+h2 {
+  margin-top: 80px;
+  margin-left: 36%;
+  font-size: 75px;
+  font-weight: 600;
 }
 
-p {
-  line-height: 2em;
-  width: 95%;
-}
-
-.bg-color {
-  position: relative;
-  background-image: url("../images/bgtile.png");
-  height: 290px;
-  overflow-x: visible;
-  z-index: auto;
-}
-
-.button {
-  position: absolute;
-  background-image: linear-gradient(to bottom right, #4b769b, #1c5380);
-  border: 1px solid #06365f;
-  color: white;
-  top: 13%;
-  left: 70%;
-  width: 115px;
-  height: 50px;
-  font-size: 18px;
-  z-index: 10;
-  cursor: pointer;
-  font-weight: bold;
-  text-align: center;
-}
-
-.button img {
-  margin-top: 5px;
-  padding-right: 10px;
+h2 hr {
+  margin-bottom: 70px;
+  width: 43%;
+  border: 0;
+  color: rgb(156, 221, 191);
+  background-color: rgb(26, 178, 107);
+  height: 9px;
 }
 
 .header {
-  position: absolute;
-  top: 12%;
-  left: 51%;
-  z-index: 2;
+  width: 100%;
+  height: 1450px;
+  position: relative;
+  background-image: url("../images/landing.jpg");
+  background-position: center;
+  background-size: cover;
 }
 
-.site {
+.header h1 {
   position: absolute;
-  background-image: url(../images/frame.png);
-  background-color: transparent;
+  top: 525px;
+  left: 25%;
+
+  font-weight: 600;
+  font-size: 125px;
+  color: white;
+}
+.header p {
+  position: absolute;
+  top: 725px;
+  left: 25%;
+  font-weight: 300;
+  font-size: 50px;
+  color: white;
+  text-align: center;
+}
+
+.whatsOn {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: stretch;
+}
+
+.whatsOnItem {
+  padding: 50px;
+  margin: 50px;
+  text-align: center;
+  width: 450px;
+}
+
+.whatsOnItem div {
+  height: 200px;
+}
+
+.whatsOnItem img {
+  width: 50%;
+  height: auto;
+}
+
+.whatsOnItem h3 {
+  margin-bottom: 40px;
+  font-weight: 700;
+  font-size: 50px;
+  color: rgb(11, 187, 125);
+}
+
+.whatsOnItem p {
+  font-weight: 300;
+  font-size: 45px;
+}
+
+.player {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: stretch;
+  margin: 0 3% 3%;
+  padding: 115px 140px 50px;
+  background-color: rgb(26, 178, 107);
+  background-image: url("../images/spotify-icon-white.png");
+  background-position: center;
+  background-size: 200px;
   background-repeat: no-repeat;
-  padding: 25px;
-  width: 480px;
-  top: 23%;
-  right: 22%;
-  z-index: 3;
 }
 
-.site p {
-  line-height: 1.5em;
-  padding-bottom: 14px;
+.player div {
+  width: 50%;
 }
 
-.site ul li {
-  text-decoration: none;
-  display: inline;
-  margin-right: 1em;
-} 
+.player h2 {
+  margin-top: 0px;
+  margin-left: 0px;
+  font-size: 65px;
+  font-weight: 600;
+  text-align: left;
+  color: white;
+}
 
-.phone {
-  position: absolute;
-  top: 10%;
-  right: 55%;
-  z-index: 1;
+.player h2 hr {
+  margin-bottom: 70px;
+  width: 89%;
+  border: 0;
+  color: white;
+  background-color: white;
+  height: 7px;
+}
+
+.player h3 {
+  font-size: 55px;
+  font-weight: bold;
+  margin-bottom: 65px;
+  color: white;
+}
+
+.player p {
+  font-size: 40px;
+  font-weight: 300;
+  margin-bottom: 80px;
+  color: white;
+}
+.player img {
+  float: right;
 }
