--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -91,14 +91,14 @@ nav a {
 
 h2 {
   margin-top: 80px;
-  margin-left: 36%;
-  font-size: 75px;
+  margin-left: 38%;
+  font-size: 60px;
   font-weight: 600;
 }
 
 h2 hr {
   margin-bottom: 70px;
-  width: 43%;
+  width: 40%;
   border: 0;
   color: rgb(156, 221, 191);
   background-color: rgb(26, 178, 107);
@@ -144,7 +144,7 @@ h2 hr {
   padding: 50px;
   margin: 50px;
   text-align: center;
-  width: 450px;
+  width: 350px;
 }
 
 .whatsOnItem div {
@@ -152,27 +152,26 @@ h2 hr {
 }
 
 .whatsOnItem img {
-  width: 50%;
+  width: 48%;
   height: auto;
 }
 
 .whatsOnItem h3 {
   margin-bottom: 40px;
   font-weight: 700;
-  font-size: 50px;
+  font-size: 40px;
   color: rgb(11, 187, 125);
 }
 
 .whatsOnItem p {
   font-weight: 300;
-  font-size: 45px;
+  font-size: 36px;
 }
 
 .player {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: stretch;
   margin: 0 3% 3%;
   padding: 115px 140px 50px;
   background-color: rgb(26, 178, 107);
@@ -180,7 +179,9 @@ h2 hr {
   background-position: center;
   background-size: 200px;
   background-repeat: no-repeat;
+  align-items: center; 
 }
+
 
 .player div {
   width: 50%;
@@ -189,7 +190,7 @@ h2 hr {
 .player h2 {
   margin-top: 0px;
   margin-left: 0px;
-  font-size: 65px;
+  font-size: 58px;
   font-weight: 600;
   text-align: left;
   color: white;
@@ -201,22 +202,23 @@ h2 hr {
   border: 0;
   color: white;
   background-color: white;
-  height: 7px;
+  height: 4px;
 }
 
 .player h3 {
-  font-size: 55px;
+  font-size: 48px;
   font-weight: bold;
-  margin-bottom: 65px;
+  margin-bottom: 40px;
   color: white;
 }
 
 .player p {
-  font-size: 40px;
+  font-size: 35px;
   font-weight: 300;
-  margin-bottom: 80px;
+  margin-bottom: 40px;
   color: white;
 }
 .player img {
+  width: 64%;
   float: right;
 }
