--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,62 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+#bluebanner { 
+  width: 100%;
+  height: 60px; 
+  background-color:#1c5380;
+  padding:150px;
+}
+
+#brand { 
+  top: 25%;
+  right: 37%;
+  position: absolute;
+}
+
+#phones { 
+  top: 20%;
+  left: 15%;
+  position: absolute;
+}
+
+#whitebanner { 
+  width: 600px;
+  height: 300px; 
+  background-color: white;
+  padding:50px;
+  top: 38%;
+  right: 10%;
+  position: absolute;
+  border-radius: 10px;
+}
+
+li { 
+  style: none;
+  display: inline;
+}
+
+ul {
+  position: absolute;
+  bottom: -80px;
+  left: 30%;
+}
+button {
+  width: 100px;
+  height: 40px; 
+  right:10%;
+  top: 27%;
+  position: absolute;
+  border-radius: 10px;
+  background-color:#06365f;
+  color: white; 
+}
+
+h1 {
+  color: #1c5380;
+  margin: 0;
+}
+p {
+  font-size: 15px;
+}
