Modifique los estilos y quedaron muy bonitos  :hankey:

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -2,7 +2,8 @@
 Colors to use:
 dark blue: #06365f
 light blue: #1c5380
-*/
+-----*/
+/*Ya casi acabo*/
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
