--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,59 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-repeat: repeat-x;
+  background-image: url(../images/bgtile.png);
+}
+
+li {
+  list-style-type: none;
+  display: inline-block;
+  color: #1c5380;
+  font-weight: bold;
+}
+
+h2 {
+  color: #06365f;
+}
+
+button {
+  float: right;
+  margin-top: 30px;
+  padding: 5px;
+  color:white;
+  background-color: #1c5380;
+  font-weight: bold;
+}
+
+
+header {
+  display: inline-block;
+}
+
+div > header > img {
+  padding: 10px;
+  margin: 0 10px;
+}
+
+.right-side {
+  position: absolute;
+  top: 70px;
+  right: 200px;
+  width: 40%;
+}
+
+.rs-text {
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size:cover;
+  padding: 30px 50px;
+}
+
+.left-side {
+  padding: 50px;
+  margin: 30px 150px;
+}
+
+footer {
+  text-align:center;
 }
