Changes applied to html and css file (fixed buttons not working)

--- a/starter-code/main.css
+++ b/starter-code/main.css
@@ -29,7 +29,7 @@ a {
   bottom: 190px;
 }
 
-.buttom {
+.button {
   position: relative;
   bottom: 30px;
   left: 100px;
@@ -73,6 +73,7 @@ a {
   position: relative;
   bottom: 520px;
   left: 635px;
+  
 }
 
 .links-bottom {
