--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,49 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+*{
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+}
 
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+.head {
+ color: #06365f;
+ margin: 0;
+}
+
+.background{
+  width: 100%;
+  height: 300px;
+  display: flex;
+  background-image: url("../images/bgtile.png");
+}
+
+#container1{
+  float: left;
+  display:flex;
+}
+
+#container2 {
+  display:flex;
+  align-items: center;
+  background-image:url("../images/frame.png");
+  background-position: center;
+  background-repeat: no-repeat; 
+}
+
+.brand{
+  size: 100px;
+}
+.button{
+  align-items: center;
+  color: #06365f;
+}
+
+.footer {
+  color: #06365f;
+}
+
+.insta{
+  color: lightgray;
 }
