--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,90 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("/starter-code/images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+.container {
+  margin: 0 auto;
+  padding-top: 90px;
+  display: flex;
+  justify-content: center;
+}
+
+.phones {
+  margin: 0;
+}
+
+.instandlog {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.login {
+  background-image: linear-gradient(#789ab7, #467298);
+  height: 40%;
+  font-weight: 600;
+  box-shadow: 3px 3px #325f86;
+  border-radius: 3px;
+  display: flex;
+  align-items: center;
+  padding: 0 15px;
+  margin-right: 5px;
+}
+
+.login a {
+  color: white;
+  text-decoration: none;
+  margin-left: 15px;
+}
+
+.content {
+  width: 500px;
+  margin: 0 0 0 50px;
+}
+
+.text {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.text h1 {
+  padding: 25px 35px 0 35px;
+  color: #06365f;
+  margin-top: 0;
+}
+
+.text p {
+  padding: 0 35px;
+}
+
+.stores {
+  padding: 30px 0 0 35px;
+}
+
+.nav {
+  width: 70%;
+  margin: 50px auto;
+  display: flex;
+  justify-content: center;
+}
+
+.nav a {
+  color: #06365f;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: bold;
+  margin: 0 10px;
+}
+
+.nav .instalink {
+  color: lightgrey;
 }
