--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -84,6 +84,7 @@ body {
 .content {
   background-image: url(../images/frame.png);
   background-repeat: no-repeat;
+  background-size: contain;
   padding: 40px;
 }
 
