--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,75 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+h1{
+  color:blue;
+}
+
+span{
+  font-weight: bold;
+}
+
+#phones{
+  float:left;
+  margin-left:350px;
+  
+}
+
+button{
+  float:right;
+  background-color:blue;
+  border-color:blue;
+  margin-top:25px;
+  padding:5px;
+  color:white;
+  font-size:10px;
+}
+
+
+
+#icon{
+  width:20px;
+  height:20px;
+}
+
+#logIn{
+  width:430px;
+  float:right;
+  margin-right:300px;
+  
+  padding:5px;
+  padding-right:10px;
+
+}
+
+#brands{
+  margin-top:50px;
+}
+
+#content{
+  float:right;
+  width:400px;
+  height:400px;
+  padding:15px;
+  margin-right:300px;
+  background-color:white;
+}
+footer{
+clear:both;
+float:right;
+margin-right:350px;
+width:600px;
+margin-top:20px;
+color:blue;
+font-weight: bold;
+padding:2px;
+
+}
+#wraper {
+  margin-bottom:-250px;
+  background: url("../images/0000FF-0.8.png");
+  background-size: 50% auto;
+  width:100%;
+  height:300px;
+}
