--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,44 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-}
+  
+  }
+
+  header{
+  background-image: url(../images/bgtile.png);
+  height: 250px;
+  }
+
+  header img{
+    position: absolute;
+    right: 25%;
+    top: 15%;
+  }
+
+  .phone{
+    background-image: url(../images/phones.png);
+    position: absolute;
+    left: 20%;
+    top: 15%;
+    
+  }
+
+  div{
+    background-image: url(../images/frame.png);
+    background-repeat: no-repeat;
+    position:relative;
+    left: 50%;
+    top:-80px;
+    width: 90%;
+  }
+
+  div h2{
+    padding: 30px 920px 0 40px;
+    font-size: 20px;
+    color: #06365f;
+  }
+
+  div p{
+    padding: 5px 700px 0 45px;
+    font-size: 14px;
+  }
