--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,63 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+ul, li{
+  float: left;
+  list-style: none;
+  margin-left: 20px;
+  color: #1c5380; 
+}
+p, h1{
+  margin-left: 35px;
+  margin-right: 35px;
+}
+h1{
+  color: #06365f;
+  padding-top: 15px;
+}
+footer{
+  padding-top: 60px;
+  padding-left: 500px;
+}
+#boton{
+  position: relative;
+  bottom: 30px;
+  left: 50px;
+  padding: 5px 10px;
+  border-radius: 2px;
+  background-color: #1c5380;
+  color: white;
+}
+#badges{
+  margin-left: 40px;
+}
+#copy{
+  color: grey;
+}
+#frame{
+  position: absolute;
+  z-index: -1;
+}
+#phones{
+  float:left;
+  margin-top: 100px;
+  margin-left: 450px;
+}
+#content{
+  margin-top: 100px;
+  margin-right: 450px;
+  height: 500px;
+  width: 500px;
+  float:right;
+}
+#fondo{
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x; 
+  width: 100%;
+  height: 450px;
+  position: absolute;
+  z-index: -2;
+}
+#prefoot{
+  clear: both;
+}
