--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,103 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*{
+  box-sizing: border-box;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 100px;
+}
+
+.background-top{
+  position: absolute;
+  background-image: url('../images/bgtile.png');
+  background-repeat: repeat-x;
+  height: 700px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: -1;
+}
+
+.content{
+  margin: auto;
+  width: 80%;
+}
+
+.phones{
+  display: block;
+  float: left;
+  max-width: 35%;
+}
+
+.container{
+  float: right;
+  margin-right: 5%;
+  max-width: 60%;
+}
+
+.clearfix{
+  clear: both;
+}
+
+.login-button{
+  color: #fff;
+  border: solid 2px #2A5880;
+  padding: 8px 14px;
+  background: linear-gradient(to bottom, #579fdc 0%,#7e9eba 0%,#537da0 100%);
+  border-radius: 4px;
+  font-size: 1em;
+  float: right;
+  margin-top: 12px;
+  cursor: pointer;
+}
+
+.login-button img{
+  margin-right: 5px;
+}
+
+.text{
+  width: 504px;
+  background-image: url('../images/frame.png');
+  padding: 20px 40px;
+  background-repeat: no-repeat;
+  font-weight: 400;
+}
+
+.text h2{
+  color: #06365f;
+  width: 60%;
+}
+
+.last-p{
+  margin-bottom: 30px;
+}
+
+footer{
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 0.8em;
+  margin-top: 70px;
+  text-align: center;
+}
+
+.footer-links{
+  list-style: none;
+}
+
+.footer-links li{
+  display: inline;
+  margin-right: 10px;
+}
+
+.footer-links li a{
+  text-decoration: none;
+  color: #1c5380;
+}
+
+.copy{
+  float: right;
 }
