--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,113 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: white;
+}
+
+.background {
+  position: fixed;
+
+  width: 100%;
+  height: 40%;
+  background-image: url("../images/bgtile.png");
+}
+
+main {
+  position: relative;
+  max-width: 900px;
+  margin: 0 auto;
+  padding-top: 100px;
+}
+
+.col-1 {
+  float: left;
+  width: 40%;
+}
+
+.col-2 {
+  float: left;
+  width: 60%;
+}
+
+.clearfix {
+  clear: both;
+}
+
+header {
+  position: relative;
+}
+
+header .logo {
+  padding: 10px;
+
+}
+
+header button {
+  position: absolute;
+  margin: 30px 0px 30px 100px;
+  padding: 10px;
+
+  background-color: #6E92AE;
+  border: 0px;
+
+  color: white;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+header button img {
+  vertical-align: middle;
+  margin-right: 5px;
+}
+
+.box-container {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding: 10px 40px;
+}
+
+.box-container h3 {
+  color: #06365f;
+  font-size: 1.8rem;
+}
+
+.box-container span {
+  font-weight: bold;
+}
+
+.icons {
+  padding: 0 40px;
+}
+
+.icons img {
+  padding: 5px;
+}
+
+.footer {
+  text-align: center;
+  padding: 20px 0;
+}
+.footer li {
+  display: inline-block;
+  padding: 10px;
+
+  text-decoration: none;
+  
+  text-align: center;
+  color: #1c5380;
+  font-weight: 600;
+  font-size: 14px;
+  
+}
+
+.footer .copy {
+  color: grey;
 }
