--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,117 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+/* General Adjustment */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding-top: 4rem;
+  background-image: url(../images/bgtile.png);
+  background-size: 100% 35%;
+  background-repeat: repeat-x;
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+
+.col {
+  float: left;
+}
+
+.col-40 {
+  width: 40%;
+}
+
+.col-60 {
+  width: 60%;
+}
+
+em {
+  font-weight: bold;
+}
+
+#container {
+  max-width: 70vw;
+  margin: 0 auto;
+}
+
+.clearfix {
+  clear: both;
+}
+
+/* Header */
+header {
+  position: relative;
+}
+
+/* Button */
+button {
+  position: absolute;
+  height: 2.5rem;
+  right: 0.5rem;
+  top: 1rem;
+  padding: 0.5rem;
+  background-image: linear-gradient(to bottom, #7A9BB7, #4A7296);
+  border: none;
+  color: #ffffff;
+  font-size: 0.9rem;
+  font-weight: bold;
+  -webkit-box-shadow: 0px 0px 15px 2px rgba(56,89,134,1);
+  -moz-box-shadow: 0px 0px 15px 2px rgba(56,89,134,1);
+  box-shadow: 0px 0px 15px 2px rgba(56,89,134,1);
+}
+
+button img {
+  margin-right: 0.5rem;
+  vertical-align: middle;
+}
+
+/* Main Section */
+
+.app-links img {
+  margin-top: 1.5rem;
+  margin-right: 2rem;
+}
+
+.main p {
+  margin-bottom: 0.9rem;
+}
+
+.main h2 {
+  margin-bottom: 1rem;
+  color: #0D3158;
+  font-size: 2rem;
+  font-weight: 500;
+  max-width: 20rem;
+  line-height: 2.3rem;
+}
+
+.main{
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding: 2.3rem;
+}
+
+/* Footer */
+
+footer {
+  margin-top: 3rem;
+  margin-bottom: 4rem;
+  font-size: 0.7rem;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+footer ul li{
+  display: inline;
+  margin: 0 .5rem;
+  color: #557DA0;
+}
+
+.copyright{
+  color: #CBCCCC;
 }
