--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,100 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*
+{
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+#upper
+{
+  background-color: #1c5380;
+  height: 240px;
+}
+
+#lower
+{
+  height: 355px;  
+}
+
+h2
+{
+  color: #06365f;
+  margin-bottom: 10%;
+}
+
+a
+{
+  color: #1c5380;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+p
+{
+  margin: 2% 0;
+}
+
+.phones
+{
+  position: absolute;
+  margin-top: -14%;
+  margin-left: 15%;
+}
+
+.logo
+{
+  position: absolute;
+  margin-top: -11%;
+  margin-left: 43%;
+}
+
+.maintext
+{
+  position: absolute;
+  margin-top: -4%;
+  margin-left: 43%;
+  background-color: white;
+  width: 33%;
+  padding: 1.5% 3%;
+}
+
+.textheader
+{
+  width: 55%;
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.google
+{
+  margin-left: 3%;
+}
+
+.navbar
+{
+  text-align: center;
+}
+
+nav
+{
+  display: inline;
+}
+
+span
+{
+  font-weight: bold;
+  color: lightgray;
+  margin-left: 1%;
+  padding-bottom: 5%;
 }
