--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -6,5 +6,87 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  padding: 100px 380px;
+  box-sizing: border-box;
+  
+}
+
+h1{
+  color: #063651;
+  width: 60%;
+  margin: 0 40px;
+  padding-top: 30px;
+  font-size: 25px;
+  line-height: 1.25em;
+}
+
+p{
+margin: 15px 40px;
+}
+
+/*br {
+  line-height: 2em;
+}*/
+
+.background-blue{
+  position:absolute;
+  background: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  width: 100%;
+  height: 300px;
+  z-index: -2;
+  top: 0;
   margin: 0;
+  left: 0;
+}
+
+#phone{
+  float:left;
+}
+
+.login{
+  position: relative;
+  bottom: 25px;
+  left:50px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  background-color: #1c5380;
+  color: white;
+  font-size:14px;
+  box-sizing: border-box;
+}
+
+#information{
+  height: auto;
+  width: 500px;
+  float: right;
+}
+
+.background-white{
+  position:absolute;
+  z-index: -1;
+}
+
+.budgets{
+  margin: 0 50px;
+}
+
+.clearfix{
+  clear: both;
+}
+
+footer{
+  padding-top: 50px;
+}
+
+ul, li{
+  float:left;
+  list-style: none;
+  margin-left: 20px;
+  color: #1c5380;
+  font-weight: 500;
+}
+
+.li-brand{
+  color: grey;
 }
