imagenes directorio camcambiadas

--- a/starter-code/instagram.css
+++ b/starter-code/instagram.css
@@ -41,7 +41,7 @@ body {
 }
 
 .degradado {
-    background-image: url("/Users/CarlosIM/IronHack/day2/daily/lab-css-instagram-clone/starter-code/images/frame.png");
+    background-image: url("./images/frame.png");
     width: 40%;
     background-size: contain;
     background-repeat: no-repeat;
@@ -74,13 +74,13 @@ body {
 
 
 #btn1 {
-background-image: url("/Users/CarlosIM/IronHack/day2/daily/lab-css-instagram-clone/starter-code/images/badge-iphone.png");
+background-image: url("./images/badge-iphone.png");
 margin-left: 20px;
 border-radius: 8px;
 }
 
 #btn2 {
-background-image: url("/Users/CarlosIM/IronHack/day2/daily/lab-css-instagram-clone/starter-code/images/badge-android.png");
+background-image: url("./images/badge-android.png");
 margin-left: 20px;
 border-radius: 8px;
 }
@@ -89,7 +89,7 @@ border-radius: 8px;
 
 .fondoazul {
 
-    background-image: url("/Users/CarlosIM/IronHack/day2/daily/lab-css-instagram-clone/starter-code/images/bgtile.png");
+    background-image: url("./images/bgtile.png");
     z-index: -1;
     width: 100%;
     height: 300px;
@@ -101,7 +101,6 @@ border-radius: 8px;
 .phone {
 
     margin: 120px 100px 60px 120px;
-   
     float: left;
 
 }
