--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,87 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+.contenedor{
+  margin: 5% 20% 5% 20%;
+}
+
+.fondo{
+  background-image: url("../images/frame.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+
+}
+
+.imgBtn{
+  margin-right: 10px;
+}
+
+.altura{
+  height: 100px;
+}
+
+.floatLeft{
+  float: left;
+  padding-top: 34px;
+}
+
+.floatRight{
+  float: right;
+}
+.logoInst{
+  display: inline;
+}
+
+.boton{
+  border: 1px solid;
+  padding: 10px;
+  width: 90px;
+  position: absolute;
+  top: 45px;
+  right: 20px;
+  border-color: #06365f;
+  border-radius: 3px;
+  background-image: linear-gradient(#527694, #305f88);
+  color: white;
+}
+ 
+.caja{
+  margin-left: 400px;
+  width: 500px;
+  position: relative;
+}
+
+h1{
+  font-size: 20px;
+  margin-left: 50px;
+  padding-top: 50px;
+  color: #06365f;
+}
+
+p{
+  padding: 5px 5px 5px 30px;
+  font-size: 20px;
+}
+
+.descargas{
+  margin-left: 100px;
+}
+
+li{
+  display: inline;
+  color: #1c5380;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 10px;
+}
+
+footer{
+  margin-top: 100px;
+}
+.copyrigth{
+  color: grey;
 }
