--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,31 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+h1 {
+  margin-bottom: 0;
+  font-size: 45px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #06365f;
+}
+p {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.generalBox {
+  padding: 20% 0 0 40%;
+}
+.secondBox {
+  width: 500px;
+  border-image: "../starter-code/images/frame.png";
+}
+
+.shortcuts {
+  background-color: azure;
+}
+
+.footer {
+  list-style: none;
+  display: inline;
+  padding-left: 3px;
+  padding-right: 3px;
+  color: #06365f;
+}
