--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,33 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 400 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  
+}
+.first{
+  background-image:url("../images/bgtile.png");
+  background-size:cover;
+  height: 200px;
+  padding:50px 0 10px 200px;
+  position: absolute;
+  
+}
+.brand{
+  float:left;
+  position: relative;
+
+  
+}
+#text{
+  background: url("/images/frame.png");
+  background-size: cover;
+  color: #1c5380;
+  text-align: left;
+}
+li{
+  display: inline-block;
+  color: #1c5380;
+  text-align: center;
+  padding: 400px 10px 20px 10px;
 }
