--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,46 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+* {
+  box-sizing: border-box;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+button {
+  background-color: #1c5380;
+  color: white;
+  padding: 10px;
+}
+
+h2 {
+  color: #06365f;
+}
+
+.firstFrame {
+  float: left;
+  padding: 10%;
+}
+
+.secondFrame {
+  padding: 10%;
+}
+
+.whiteFrame {
+  background-image: url("images/frame.png");
+  background-repeat: no-repeat;
+}
+
+.ios, .android {
+  margin: 15px 0;
+}
+
+
+footer {
+  color: #1c5380;
 }
