--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,85 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+main {
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  margin-top: 60px;
+}
+
+main > * {
+  margin: 10px;
+}
+
+main > img {
+  height: 500px;
+}
+
+main > .right-side {
+  width: 500px;
+}
+
+main > .right-side > .small-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100px;
+}
+
+main > .right-side > .small-header > img {
+  height: 80px;
+}
+
+main > .right-side > .small-header > button {
+  background-color: #1c5380;
+  color: white;
+  border: 1px solid #06365f;
+  border: 0px;
+  border-radius: 3px;
+  box-shadow: 0px 0px 2px black;
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+  font-size: 16px;
+  height: 60px;
+  padding: 10px;
+}
+
+main > .right-side > .small-header > button > img {
+  height: 15px;
+  margin: 3px 5px 3px 0px;
+}
+
+main > .right-side > .content {
+  background-image: url(../images/frame.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 40px;
+}
+
+main > .right-side > .content > h2 {
+  margin: 0px 0px 5px 0px;
+  color: #06365f;
+}
+
+footer {
+  text-align: center;
+}
+
+footer > ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  color: #1c5380;
+  font-weight: bold;
+}
+
+footer > ul > li {
+  padding: 10px;
+  text-transform: uppercase;
 }
