--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,73 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
 body {
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.container {
+
+  /* height: 100%; */
+  /* width: 100%; */
+  display: flex;
+  justify-content: space-evenly;
+  /* align-content: space-between; */
+  margin: 100px 0;
+
+}
+
+.biglogo {
+  margin-right: 20px;
+
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+
+}
+
+.infobox {
+  width: 60%;
+  height: 350px;
+  border-radius: 10px;
+  text-align: center;
+  background-image: url("../images/frame.png");
+  background-size: auto;
+  background-repeat: no-repeat;
+  padding: 40px;
+}
+
+.buttons {
+  margin-top: 5px;
+
+}
+button {
+  height: 40px;
+  background: blue;
+  border: none;
+  border-radius: 5px;
+  font-size: 1.3em;
+  color: white;
+  margin: 15px;
+}
+
+div > img {
+  margin: 0 10px;
+
+}
+
+.btn {
+  float: left;
+  width: 60px;
+}
+
+.insta-logo {
+  display: flex;
+}
+
+footer {
+  text-align: center;
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
