--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,115 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+* {
+  margin: 0;
+  padding: 0;
+}
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: #f7f7f7f7;
+}
+  
+button {
+  padding: 2px !important;
+  border-radius: 5px;
+}
+
+button img {
+  padding-left: 8px;
+}
+
+#containerPrincipal {
+  background-image: linear-gradient(rgba(6, 54, 95, 0.7), rgb(28, 83, 128, 0.7), #06365f);
+  height: 250px;
+  width: 100%;
+}
+
+h1 {    
+  font-family: sans-serif;
+  width: 70%;
+  color: #06365f;
+  padding: 16px;
+}
+
+#info {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  border-radius: 4px;
+  border-radius: 4px;
+  border: 1px solid linear-gradient(rgba(6, 54, 95, 0.7));
+  box-shadow: 0px -1px 2px 1px;
+}
+
+#info p {
+  padding: 0px 8px 14px 16px;
+}
+
+.float-r {
+  float: right;
+  padding: 10px 0;
+}
+
+li {
+  display: inline-block;
+  margin: 11px;
+}
+
+.logoImg {
+  width: 65%;
+}
+
+.main{
+	display: flex;
+	flex-wrap: wrap-reverse;
+	justify-content: center;
+
+}
+
+.mainFilho{
+margin-top: 2%;
+flex: 1;
+flex-shrink: 1;
+max-width: 350px;
+min-width: 300px;
+}
+
+div.mainFilho {
+  margin-top: 130px;
+}
+
+button p {
+  font-size: 14px;
+  float: right;
+  padding: 5px 8px 4px 8px;
+
+}
+
+section img.mockup {
+  width: 70%;
+}
+
+ul {
+  list-style-type: none;
+}
+
+#mockupSection {
+  margin-top: 130px;
+}
+
+li a {
+  text-decoration: none;
+  color: #06365f;
+}
+
+nav {
+  width: 50%;
+  margin: 0 auto;
+}
+
+footer {
+  margin-top: 2%;
 }
